src/test/deca/context/valid/class/method/same_name_classe_and_method.deca
// Description:
//    Déclaration d'une méthode ayant le nom de sa classe
//
// Resultats:
//    Aucune erreur
// 
// Historique:
//    cree le 01/01/2016

class A {
	void A() {
	}
}

{

}

