src/test/deca/context/invalid/class/field/method_with_same_name.deca
// Description:
//    Déclaration d'un champ de nom identique à une méthode déjà présente
//
// Resultats:
//    already defined
// 
// Historique:
//    cree le 01/01/2016

class C {
	int a() {

	}
	A a;
}

{

}
